--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,9 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/modern-normalize';
+@import './utils/visually-hidden';
+@import './utils/variables';
+@import './utils/base';
+@import './header';
+@import './select-gender';
