--- a/src/sass/_select-gender.scss
+++ b/src/sass/_select-gender.scss
@@ -1,2 +1,197 @@
+.select-gender__section {
+  padding-top: 270px;
+  margin-bottom: 30px;
+}
+
 .select-gender__heading {
+  margin-bottom: 10px;
+}
+
+.select-gender__list {
+  padding: 30px 60px;
+}
+
+.select-gender__list-item {
+  font-size: 1.2em;
+  font-weight: 300;
+  line-height: 1.15;
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+.select-gender__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.select-gender__wrap {
+  width: 370px;
+  height: 370px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.select-gender__button-background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+@-webkit-keyframes pulse2 {
+  0% {
+    transform: translateZ(0) scale(1);
+    opacity: 0.3;
+  }
+  50% {
+    transform: translateZ(0) scale(0.96);
+    opacity: 0.1;
+  }
+  to {
+    transform: translateZ(0) scale(1);
+    opacity: 0.3;
+  }
+}
+@keyframes pulse2 {
+  0% {
+    transform: translateZ(0) scale(1);
+    opacity: 0.3;
+  }
+  50% {
+    transform: translateZ(0) scale(0.96);
+    opacity: 0.1;
+  }
+  to {
+    transform: translateZ(0) scale(1);
+    opacity: 0.3;
+  }
+}
+@-webkit-keyframes pulse3 {
+  0% {
+    transform: translateZ(0) scale(1);
+    opacity: 0.2;
+  }
+  50% {
+    transform: translateZ(0) scale(0.96);
+    opacity: 0.1;
+  }
+  to {
+    transform: translateZ(0) scale(1);
+    opacity: 0.2;
+  }
+}
+@keyframes pulse3 {
+  0% {
+    transform: translateZ(0) scale(1);
+    opacity: 0.2;
+  }
+  50% {
+    transform: translateZ(0) scale(0.96);
+    opacity: 0.1;
+  }
+  to {
+    transform: translateZ(0) scale(1);
+    opacity: 0.2;
+  }
+}
+
+.select-gender__button-background-first-circle {
+  width: 78%;
+  height: 78%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 2;
+  opacity: 0.3;
+  border-radius: 50%;
+  -webkit-animation: pulse2 2s ease-in-out -0.26s infinite;
+  animation: pulse2 2s ease-in-out -0.26s infinite;
+}
+
+.select-gender__button-background-first-circle--female {
+  border: 1px solid #ef5eb9;
+  background-image: linear-gradient(90deg, #f53373, #bf51e8);
+  box-shadow: 0 20px 30px 0 rgb(76 5 45 / 60%);
+}
+.select-gender__button-background-first-circle--male {
+  border: 1px solid #5bd8f0;
+  background-image: linear-gradient(90deg, #33f5e0, #5172e8);
+  box-shadow: 0 20px 30px 0 rgb(13 38 102 / 60%);
+}
+
+.select-gender__button-background-second-circle {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 1;
+  opacity: 0.1;
+  border-radius: 50%;
+  position: absolute;
+  -webkit-animation: pulse3 2s ease-in-out 0.26s infinite;
+  animation: pulse3 2s ease-in-out 0.26s infinite;
+}
+
+.select-gender__button-background-second-circle--female {
+  border: 1px solid #ef5eb9;
+  background-image: linear-gradient(90deg, #f53373, #bf51e8);
+  box-shadow: 0 20px 30px 0 rgb(76 5 45 / 60%);
+}
+.select-gender__button-background-second-circle--male {
+  border: 1px solid #5bd8f0;
+  background-image: linear-gradient(90deg, #33f5e0, #5172e8);
+  box-shadow: 0 20px 30px 0 rgb(13 38 102 / 60%);
+}
+
+.select-gender__button-content {
+  width: 55%;
+  height: 55%;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  opacity: 0.9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.select-gender__button-content--female {
+  border: 1px solid #ef5eb9;
+  background-image: linear-gradient(90deg, #f53373, #bf51e8);
+  box-shadow: 0 20px 30px 0 rgb(76 5 45 / 60%);
+}
+
+.select-gender__button-content--male {
+  border: 1px solid #5bd8f0;
+  background-image: linear-gradient(90deg, #33f5e0, #5172e8);
+  box-shadow: 0 20px 30px 0 rgb(13 38 102 / 60%);
+}
+
+.select-gender__button-content-icon {
+  fill: var(--primary-color);
+}
+
+.select-gender__button-content-desc {
+  margin: 0;
+  font-size: 30px;
+  font-weight: 300;
+  color: var(--primary-color);
 }
