--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #201d34;
   font-family: 'Roboto', sans-serif;
@@ -5,6 +9,7 @@ body {
 }
 
 .section {
+  width: 100%;
 }
 
 .container {
@@ -18,4 +23,26 @@ a {
 
 button {
   cursor: pointer;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0;
+}
+h2 {
+  font-size: 1.5em;
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
 }
