--- a/src/sass/_select-gender.scss
+++ b/src/sass/_select-gender.scss
@@ -24,6 +24,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
+  @media screen and (min-width: 768px) {
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin: -20px;
+  }
 }
 
 .select-gender__wrap {
