--- a/src/sass/_motivation.scss
+++ b/src/sass/_motivation.scss
@@ -5,6 +5,13 @@
   justify-content: start;
 }
 
+.motivation__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .motivation__heading {
   font-size: 42px;
   text-align: center;
@@ -46,6 +53,7 @@
 }
 
 .motivation__list-item-heading {
+  margin-top: 10px;
   font-size: 24px;
   opacity: 0.7;
   margin-bottom: 20px;
