--- a/src/sass/_select-gender.scss
+++ b/src/sass/_select-gender.scss
@@ -29,9 +29,8 @@
     flex-direction: column;
   }
   @media screen and (min-width: 768px) {
-    align-items: flex-start;
-    flex-wrap: wrap;
-    margin: -20px;
+    align-items: center;
+    justify-content: center;
   }
 }
 
