--- a/src/sass/_select-gender.scss
+++ b/src/sass/_select-gender.scss
@@ -35,13 +35,26 @@
 }
 
 .select-gender__wrap {
-  width: 370px;
-  height: 370px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+
+  @media (max-width: 439px) {
+    width: 250px;
+    height: 250px;
+  }
+
+  @media screen and (min-width: 440px) and (max-width: 1023px) {
+    width: 370px;
+    height: 370px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 440px;
+    height: 440px;
+  }
 }
 
 .select-gender__button-background {
@@ -195,11 +208,28 @@
 
 .select-gender__button-content-icon {
   fill: var(--primary-color);
+
+  @media (max-width: 439px) {
+    width: 45px;
+    height: 55px;
+  }
+
+  @media screen and (min-width: 440px) {
+    width: 77px;
+    height: 95px;
+  }
 }
 
 .select-gender__button-content-desc {
   margin: 0;
-  font-size: 30px;
   font-weight: 300;
   color: var(--primary-color);
+
+  @media (max-width: 439px) {
+    font-size: 20px;
+  }
+
+  @media screen and (min-width: 440px) {
+    font-size: 30px;
+  }
 }
