--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,6 @@
 @import './select-gender';
 @import './motivation';
 @import './footer';
+@import './quiz/quiz-header';
+@import './quiz/quiz-hero-section';
+@import './quiz/quiz-questions';
