--- a/src/sass/_motivation.scss
+++ b/src/sass/_motivation.scss
@@ -63,10 +63,11 @@
   max-width: 100%;
   font-size: 16px;
   opacity: 0.9;
+  padding: 0 20px;
 }
 
 .motivation__button-wrap {
-  margin-top: 35px;
+  margin-top: 60px;
   margin-bottom: 35px;
   max-width: 400px;
   position: relative;
