--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,4 @@
 @import './quiz/quiz-header';
 @import './quiz/quiz-hero-section';
 @import './quiz/quiz-questions';
+@import './quiz/quiz-progress';
