--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -11,20 +11,40 @@
   position: relative;
 }
 .logo-link {
-  width: 200px;
-  height: 122px;
+  // width: 200px;
+  // height: 122px;
+  padding: 10px 20px;
   border-radius: 85px;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media screen and (min-width: 440px) {
+    padding: 22px 30px;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 30px 33px;
+  }
 }
 
-.header__logo-link {
+.logo-link--header {
   background-color: var(--button-background);
 }
 
-.header__logo {
+.logo {
   color: var(--primary-color);
+  width: 70px;
+  height: 50px;
+
+  @media screen and (min-width: 440px) {
+    width: 100px;
+    height: 55px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 135px;
+    height: 60px;
+  }
 }
 
 .header__logo-svg {
