--- a/src/sass/quiz/_quiz-hero-section.scss
+++ b/src/sass/quiz/_quiz-hero-section.scss
@@ -1,7 +1,17 @@
 .hero__section {
   min-height: 350px;
-  height: 350px;
+  height: 100%;
   position: relative;
+  // overflow: hidden;
+}
+
+.hero__container {
+  background-size: cover;
+  background-image: url(https://storage.1forfit.com/files/dwe5ThXlbTZp9HktZiWDoUzQIe9dMA0ybGMdFAnN.jpeg);
+  width: 100%;
+  height: 100%;
+  position: relative;
+  // z-index: 1;
 
   &::before {
     content: '';
@@ -12,27 +22,113 @@
     height: 100%;
     opacity: 0.4;
     background-color: #201d34;
-    z-index: 11t;
+    z-index: 1;
   }
 }
 
-.hero__container {
-  background-size: cover;
-  background-image: url(https://storage.1forfit.com/files/dwe5ThXlbTZp9HktZiWDoUzQIe9dMA0ybGMdFAnN.jpeg);
+.hero__mask-svg {
+  fill: var(--background-color);
+  transform: rotate(180deg) scale(3.5) translateX(-100px);
   width: 100%;
   height: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
-.svg {
-  fill: var(--background-color);
-  transform: rotateX(180deg) scale(1.5);
-  width: 100%;
   position: absolute;
-  bottom: -30px;
+  bottom: -30%;
+  left: 0;
+
+  @media screen and (min-width: 768px) {
+    transform: rotate(180deg) scale(1.8) translateX(-150px);
+    bottom: -36%;
+  }
 }
 
-.quiz-container {
-  height: 300px;
+.hero__heading-wrap {
+  position: relative;
+  z-index: 5;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 140px;
+
+  @media screen and (min-width: 440px) {
+    padding-top: 120px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+  }
+}
+
+.heading-circle {
+  width: 80px;
+  height: 80px;
+  position: relative;
+  margin-bottom: 100px;
+
+  @media screen and (min-width: 440px) {
+    width: 120px;
+    height: 120px;
+  }
+}
+
+.heading-circle--first {
+  opacity: 0.09;
+  top: -40px;
+  left: -40px;
+  width: calc(100% + 80px);
+  height: calc(100% + 80px);
+  position: absolute;
+  border-radius: 50%;
+  background-image: linear-gradient(90deg, #ceef31, #91ef31);
+  box-shadow: 0 20px 30px 0 rgb(38 59 7 / 60%);
+  border: 1px solid #c5fb44;
+}
+
+.heading-circle--second {
+  opacity: 0.27;
+  top: -20px;
+  left: -20px;
+  width: calc(100% + 40px);
+  height: calc(100% + 40px);
+  position: absolute;
+  border-radius: 50%;
+  background-image: linear-gradient(90deg, #ceef31, #91ef31);
+  box-shadow: 0 20px 30px 0 rgb(38 59 7 / 60%);
+  border: 1px px solid #c5fb44;
+  -webkit-animation: pulse2 2s ease-in-out -0.26s infinite;
+  animation: pulse2 2s ease-in-out -0.26s infinite;
+}
+
+.heading-circle--third {
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 50%;
+  background-image: linear-gradient(90deg, #ceef31, #91ef31);
+  box-shadow: 0 20px 30px 0 rgb(38 59 7 / 60%);
+  border: 1px solid #c5fb44;
+}
+
+.heading-circle__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 100%;
+}
+.heading__logo {
+  width: 60px;
+  height: 60px;
+}
+
+.hero__heading {
+  font-size: 50px;
+  font-weight: 100;
+  color: var(--primary-color);
+  width: 500px;
+  text-align: center;
 }
