--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -15,6 +15,9 @@ body {
 .container {
   padding: 0 30px;
   width: 100%;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a {
