--- a/src/sass/quiz/_quiz-progress.scss
+++ b/src/sass/quiz/_quiz-progress.scss
@@ -112,7 +112,7 @@
   z-index: 2;
 }
 
-.progress-bar__line-active {
+.progress-bar__line-done {
   position: absolute;
   left: 0;
   top: 0;
@@ -120,11 +120,13 @@
   margin-top: auto;
   margin-bottom: auto;
   height: 2px;
-  width: calc((((100% - 20px) / 13) * 3) + 20px);
+  // width: calc((((100% - 20px) / 13) * 3) + 20px);
   background-color: #ceef31;
   z-index: 3;
-  // transform: translateX(-100%);
-  animation: lineactive 5s ease-in-out 3s;
+}
+
+.progress-bar__line-done--calc {
+  animation: lineactive 3s ease-in-out 1s both;
 }
 
 .progress-bar__dot {
@@ -156,7 +158,7 @@
     border: 3px solid var(--primary-color);
   }
 
-  &.done .progress-bar__dot-desc {
+  &.active .progress-bar__dot-desc {
     opacity: 1;
   }
 }
