--- a/src/sass/quiz/_quiz-hero-section.scss
+++ b/src/sass/quiz/_quiz-hero-section.scss
@@ -1,5 +1,5 @@
 .hero__section {
-  min-height: 350px;
+  // min-height: 450px;
   height: 100%;
   position: relative;
   overflow: hidden;
@@ -50,6 +50,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 140px;
+  min-height: 450px;
 
   @media screen and (min-width: 440px) {
     padding-top: 120px;
@@ -131,4 +132,6 @@
   color: var(--primary-color);
   width: 500px;
   text-align: center;
+  position: absolute;
+  bottom: 0;
 }
