--- a/src/sass/quiz/_quiz-progress.scss
+++ b/src/sass/quiz/_quiz-progress.scss
@@ -4,6 +4,8 @@
 
 .progress__container {
   max-width: 1000px;
+  position: relative;
+  overflow: hidden;
 }
 
 .progress__percentage {
@@ -18,14 +20,30 @@
   font-size: 24px;
   font-weight: 500;
   padding-top: 5px;
+  width: 100%;
+  z-index: 2;
+
+  @media screen and (max-width: 439px) {
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    transform: scale(0.8);
+  }
+
+  @media screen and (min-width: 440px) and (max-width: 767px) {
+    position: absolute;
+    bottom: 8px;
+    left: 0;
+    transform: scale(1.3);
+  }
 }
 
 .progress__wrap {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: relative;
-  z-index: 1;
+  // z-index: 3;
   padding: 30px;
   min-height: 100px;
   background-color: rgba(21, 18, 38, 0.7);
@@ -47,6 +65,13 @@
   transition: color 0.35s ease;
   text-align: center;
   cursor: pointer;
+  z-index: 3;
+
+  @media screen and (max-width: 439px) {
+    height: 35px;
+    min-width: 100px;
+    font-size: 16px;
+  }
 
   &:hover,
   &:focus {
@@ -60,6 +85,11 @@
   height: 27px;
   margin-right: 15px;
   fill: currentColor;
+
+  @media screen and (max-width: 439px) {
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .progress__button-icon--help {
@@ -90,6 +120,10 @@
   // align-items: center;
   margin-top: auto;
   margin-bottom: auto;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .progress-bar__line {
