--- a/src/sass/quiz/_quiz-questions.scss
+++ b/src/sass/quiz/_quiz-questions.scss
@@ -64,6 +64,10 @@
   font-weight: 300;
   font-size: 20px;
   z-index: 5;
+  background: transparent;
+  width: 100%;
+  min-height: 100%;
+  border: none;
 
   @media screen and (min-width: 768px) {
     font-size: 22px;
