--- a/src/sass/quiz/_quiz-hero-section.scss
+++ b/src/sass/quiz/_quiz-hero-section.scss
@@ -49,15 +49,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 140px;
   min-height: 450px;
 
-  @media screen and (min-width: 440px) {
-    padding-top: 120px;
+  @media screen and (min-width: 440px) and (max-width: 767px) {
+    padding-top: 50px;
   }
 
   @media screen and (min-width: 768px) {
-    padding-top: 60px;
+    // padding-top: 60px;
   }
 }
 
@@ -130,8 +129,13 @@
   font-size: 50px;
   font-weight: 100;
   color: var(--primary-color);
-  width: 500px;
+  max-width: 520px;
   text-align: center;
   position: absolute;
   bottom: 0;
+  padding: 30px 15px 0;
+
+  @media (max-width: 767px) {
+    font-size: 40px;
+  }
 }
