--- a/src/sass/quiz/_quiz-hero-section.scss
+++ b/src/sass/quiz/_quiz-hero-section.scss
@@ -120,9 +120,21 @@
   position: relative;
   height: 100%;
 }
+
+.back {
+  // background-image: url('../images/dev.svg');
+}
+
 .heading__logo {
   width: 60px;
   height: 60px;
+  fill: var(--primary-color);
+}
+
+.heading__logo-svg {
+  width: 60px;
+  height: 60px;
+  fill: var(--primary-color);
 }
 
 .hero__heading {
@@ -134,6 +146,8 @@
   position: absolute;
   bottom: 0;
   padding: 30px 15px 0;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (max-width: 767px) {
     font-size: 40px;
