--- a/src/sass/quiz/_quiz-hero-section.scss
+++ b/src/sass/quiz/_quiz-hero-section.scss
@@ -7,9 +7,9 @@
 
 .hero__container {
   background-size: cover;
-  background-image: url(https://storage.1forfit.com/files/dwe5ThXlbTZp9HktZiWDoUzQIe9dMA0ybGMdFAnN.jpeg);
+  // background-image: url('../images/quiz-bg/bg-1.jpeg');
   width: 100%;
-  height: 100%;
+  min-height: 340px;
   position: relative;
   // z-index: 1;
 
@@ -21,9 +21,13 @@
     width: 100%;
     height: 100%;
     opacity: 0.4;
-    background-color: #201d34;
+    background-color: var(--background-color);
     z-index: 1;
   }
+}
+
+.hero__container--card {
+  min-height: 250px;
 }
 
 .hero__mask-svg {
@@ -39,6 +43,14 @@
     transform: rotate(180deg) scale(1.8) translateX(-150px);
     bottom: -36%;
   }
+}
+
+.hero__mask-svg--card {
+  fill: var(--primary-color);
+  transform: scale(1);
+  top: -30%;
+  left: 0;
+  opacity: 0.2;
 }
 
 .hero__heading-wrap {
