страница выбора почти готова

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,4 +15,6 @@
 @import './quiz/quiz-header';
 @import './quiz/quiz-hero-section';
 @import './quiz/quiz-questions';
+@import './quiz/quiz-card';
+@import './quiz/quiz-choice';
 @import './quiz/quiz-progress';
