--- a/src/sass/quiz/_quiz-hero-section.scss
+++ b/src/sass/quiz/_quiz-hero-section.scss
@@ -39,6 +39,10 @@
   bottom: -30%;
   left: 0;
 
+  @media screen and (max-width: 439px) {
+    transform: rotate(180deg) scale(2.5) translateX(-100px);
+  }
+
   @media screen and (min-width: 768px) {
     transform: rotate(180deg) scale(1.8) translateX(-150px);
     bottom: -36%;
@@ -62,6 +66,11 @@
   justify-content: center;
   align-items: center;
   min-height: 450px;
+
+  @media screen and (max-width: 439px) {
+    padding-top: 100px;
+    min-height: 200px;
+  }
 
   @media screen and (min-width: 440px) and (max-width: 767px) {
     padding-top: 50px;
@@ -161,7 +170,12 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media (max-width: 767px) {
+  @media screen and (max-width: 439px) {
+    bottom: -50px;
+    font-size: 30px;
+  }
+
+  @media screen and (min-width: 440px) and (max-width: 767px) {
     font-size: 40px;
   }
 }
