--- a/src/sass/utils/_modern-normalize.scss
+++ b/src/sass/utils/_modern-normalize.scss
@@ -176,7 +176,7 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button;
+  -webkit-appearance: none;
 }
 
 /**
