--- a/src/sass/quiz/_quiz-questions.scss
+++ b/src/sass/quiz/_quiz-questions.scss
@@ -8,6 +8,9 @@
   @media screen and (min-width: 768px) {
     width: 550px;
   }
+  @media screen and (min-width: 1024px) {
+    width: 730px;
+  }
 }
 
 .quiz-list {
