--- a/src/sass/quiz/_quiz-choice.scss
+++ b/src/sass/quiz/_quiz-choice.scss
@@ -1,4 +1,54 @@
-.pork-hidden-checkbox {
+.quiz__choice-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.quiz__choice-form-desc {
+  font-weight: 300;
+  font-size: 22px;
+  padding: 20px 30px;
+  border-radius: 35px;
+  background-color: #2f2e40;
+  margin: 0 auto 50px;
+  text-align: center;
+}
+
+.quiz__choice-form-desc--male {
+  color: #728ded;
+}
+.quiz__choice-form-desc--female {
+  color: #cc72ed;
+}
+
+.quiz__choice-form-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  margin: -10px;
+  width: 350px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    width: 100%;
+  }
+}
+
+.quiz__choice-form-element {
+  margin: 10px;
+  flex-basis: calc((100% - 40px) / 2);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+  @media screen and (min-width: 1024px) {
+    flex-basis: calc((100% - 80px) / 4);
+  }
+}
+
+.quiz__choice-hidden-checkbox {
   &:checked + .quiz__choice-label {
     border-color: var(--primary-color);
     background-color: hsla(0, 0%, 100%, 0.05);
@@ -18,15 +68,21 @@
   &:checked + .quiz__choice-label .quiz__choice-desc {
     opacity: 1;
   }
+
+  &:disabled + .quiz__choice-label {
+    opacity: 0.5;
+  }
 }
 
 .quiz__choice-label {
   position: relative;
   cursor: pointer;
-  display: inline-block;
+  // display: inline-block;
   height: 150px;
   // max-width: 140px;
-  width: 140px;
+  // width: 140px;
+  width: 100%;
+  padding: 10px;
   border-radius: 30px;
   border: 1px solid #636171;
   transition: all 0.35s ease;
@@ -49,6 +105,8 @@
 .quiz__choice-desc {
   font-size: 22px;
   font-weight: 300;
+  width: 130px;
+  padding: 0 5px;
   text-align: center;
   color: var(--primary-color);
   opacity: 0.5;
@@ -106,6 +164,15 @@
 .quiz__choice__button-wrap {
   box-shadow: 0 20px 30px 0 rgb(13 38 102 / 60%);
   position: relative;
+  height: 70px;
+  width: 320px;
+  min-width: 160px;
+
+  @media screen and (max-width: 439px) {
+    height: 60px;
+    width: 250px;
+    font-size: 22px;
+  }
 
   &::before {
     position: absolute;
@@ -115,7 +182,6 @@
     height: 100%;
     content: '';
     border-radius: 40px;
-    // opacity: 0;
     transition: opacity 0.35s ease;
   }
 
@@ -150,9 +216,8 @@
 }
 
 .quiz__choice__button-link {
-  height: 70px;
-  width: 320px;
-  min-width: 160px;
+  width: 100%;
+  height: 100%;
   border-radius: 40px;
   background-color: transparent;
   color: var(--primary-color);
@@ -167,12 +232,6 @@
   cursor: pointer;
   z-index: 3;
   position: relative;
-
-  @media screen and (max-width: 439px) {
-    height: 60px;
-    width: 250px;
-    font-size: 22px;
-  }
 
   &:hover,
   &:focus {
