страницы квиза настроены

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,7 +14,8 @@
 @import './footer';
 @import './quiz/quiz-header';
 @import './quiz/quiz-hero-section';
-@import './quiz/quiz-questions';
+@import './quiz/quiz-answers';
 @import './quiz/quiz-card';
 @import './quiz/quiz-choice';
+@import './quiz/quiz-choice-line';
 @import './quiz/quiz-progress';
