--- a/src/sass/quiz/_quiz-choice.scss
+++ b/src/sass/quiz/_quiz-choice.scss
@@ -203,6 +203,10 @@
   }
 }
 
+.quiz__choice__button-wrap--disabled {
+  opacity: 0.2;
+}
+
 .quiz__choice__button-wrap--male {
   &::before {
     background-image: linear-gradient(90deg, #33f5e0, #5172e8);
