--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -93,3 +93,10 @@
   text-align: right;
   color: var(--background-color);
 }
+
+.reset-button {
+  margin-top: 20px;
+  font-size: 8px;
+  background: transparent;
+  border: transparent;
+}
