--- a/src/sass/quiz/_quiz-choice-line.scss
+++ b/src/sass/quiz/_quiz-choice-line.scss
@@ -27,7 +27,7 @@
 .quiz__choice-line-form-wrap {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   margin: -10px;
   width: 350px;
