--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,4 +2,6 @@
   --primary-color: #fff;
   --button-background: rgba(38, 29, 62, 0.699);
   --background-color: #201d34;
+  --valid-color: #ceef31;
+  --invalid-color: #ee2020;
 }
