--- a/src/sass/_measurements.scss
+++ b/src/sass/_measurements.scss
@@ -1,5 +1,6 @@
 .measurements__section {
   margin: 30px 0;
+  overflow: hidden;
 }
 
 .measurements__container {
@@ -345,4 +346,39 @@
   background-color: rgba(204, 114, 237, 0.05);
   box-shadow: inset 0 0 24px 0 rgb(247 106 153 / 33%);
   border-radius: 50%;
+}
+
+.loader__desc {
+  position: relative;
+  width: 100%;
+  height: 50px;
+}
+.loader__desc-wrap {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+  position: absolute;
+  top: 20%;
+  left: 15%;
+  // width: 1200px;
+  // width: 100%;
+  transform: translateX(400px);
+  transition: transform 0.7s ease;
+}
+
+.desc {
+  width: 300px;
+  transition: opacity 1s ease, transform 1s ease;
+  &:not(:last-child) {
+    margin-right: 100px;
+  }
+}
+.desc--hidden {
+  opacity: 0.1;
+}
+
+.desc--active {
+  opacity: 1;
+  transform: scale(1.3);
 }
