--- a/src/sass/_measurements.scss
+++ b/src/sass/_measurements.scss
@@ -329,16 +329,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  opacity: 1;
+  transition: opacity 2s ease;
+  // display: none;
 }
 
 .loader {
   position: relative;
+  margin-bottom: 50px;
 }
 
 .loader__bg {
   position: absolute;
-  width: 85%;
-  height: 85%;
+  width: 98%;
+  height: 98%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -352,15 +356,16 @@
   position: relative;
   width: 100%;
   height: 50px;
+  display: none;
 }
 .loader__desc-wrap {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
   position: absolute;
   top: 20%;
-  left: 15%;
+  left: 10%;
   // width: 1200px;
   // width: 100%;
   transform: translateX(400px);
@@ -384,3 +389,28 @@
 }
 
 //deploy
+
+.circle-progress {
+  width: 200px;
+  height: 200px;
+}
+
+.circle-progress-value {
+  stroke-width: 1px;
+  stroke: #4597ff;
+  stroke-linecap: round;
+}
+
+.circle-progress-circle {
+  stroke-width: 2px;
+}
+
+.circle-progress-circle {
+  stroke-width: 1px;
+  stroke: hsla(0, 0%, 100%, 0.653);
+}
+.circle-progress-text {
+  fill: var(--primary-color);
+  font-weight: 100;
+  font-size: 30px;
+}
