--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -1,10 +1,14 @@
 .final__hero-section {
   background-image: url('../images/final-background.jpeg');
   position: relative;
-  padding: 200px 0 220px;
+  padding: 100px 0 30px;
   overflow: hidden;
   background-size: cover;
   background-position: 50%;
+
+  @media screen and (min-width: 768px) {
+    padding: 200px 0 220px;
+  }
 }
 
 .final__hero-container {
@@ -16,10 +20,13 @@
 }
 
 .final__hero-cta-wrap {
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  width: 430px;
+  // width: 430px;
+  width: 100%;
   margin-right: 50px;
 }
 
@@ -76,11 +83,281 @@
   position: relative;
   width: 430px;
   height: 470px;
+  z-index: 0;
 }
 
 .final__hero-phone {
   position: absolute;
-  height: 600px;
-  top: 0;
+
+  @media screen and (max-width: 439px) {
+    top: 144px;
+    right: 0;
+    transform: translateX(40%);
+    left: auto;
+    height: 400px;
+  }
+  @media screen and (min-width: 440px) and (max-width: 767px) {
+    margin-left: -180px;
+    margin-top: 60px;
+    height: 500px;
+  }
+
+  @media screen and (min-width: 768px) {
+    height: 600px;
+    top: 0;
+    left: 0;
+  }
+}
+
+.final__hero-parallax {
+  position: absolute;
   left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+.final__hero-parallax-image--first {
+  position: absolute;
+  width: auto;
+  left: -40px;
+  bottom: auto;
+
+  @media screen and (max-width: 1023px) {
+    height: 160px;
+    top: 15px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    bottom: 10%;
+    left: -180px;
+  }
+}
+
+// .final__hero-parallax-image--second {
+//   position: absolute;
+//   height: 150px;
+//   width: auto;
+//   left: 40%;
+//   right: auto;
+//   bottom: -80px;
+//   top: auto;
+//   display: none;
+// }
+
+.final__hero-parallax-image--third {
+  position: absolute;
+  height: 200px;
+  width: auto;
+  right: -90px;
+  bottom: 0;
+
+  @media screen and (max-width: 1023px) {
+    left: auto;
+    top: 30px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    bottom: 20%;
+    right: -50px;
+    height: 390px;
+  }
+}
+
+.final__hero-parallax-image--fourth {
+  position: absolute;
+  width: auto;
+
+  @media screen and (max-width: 1023px) {
+    top: auto;
+    left: -80px;
+    bottom: 0;
+    height: 200px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    top: -10%;
+    right: 40%;
+  }
+}
+
+.final__summary-section {
+  padding-top: 40px;
+  margin-bottom: 50px;
+}
+
+.final__summary-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.final__summary-heading {
+  font-size: 34px;
+  margin-bottom: 40px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.final__summary-profile-cards-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.profile-card {
+  padding: 10px;
+  background-color: var(--card-background);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  overflow: hidden;
+  height: 100px;
+  width: 100px;
+
+  &:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+
+.profile-cards__value {
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.profile-cards__value--first {
+  color: #44b26b;
+}
+
+.profile-cards__value--second {
+  color: #b0ed97;
+}
+
+.profile-cards__value--third {
+  color: #fbc02d;
+}
+
+.profile-cards__text {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.final__summary-card {
+  min-height: 469px;
+  width: 345px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  background-color: var(--card-background);
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.final__summary-weight-head {
+  margin-bottom: 10px;
+}
+
+.final__summary-card-heading {
+  font-size: 34px;
+  font-weight: 700;
+  max-width: 250px;
+  margin-bottom: 30px;
+}
+
+.final__summary-weight-subtitle {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.final__summary-weight-subtitle--bold {
+  font-weight: 700;
+}
+
+.final__summary-weight-kg {
+  font-size: 30px;
+  color: #b0ed97;
+  text-align: left;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.final__summary-weight-kg-icon {
+  margin-right: 10px;
+  border-radius: 100%;
+  background-color: rgba(176, 237, 151, 0.2);
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+}
+
+.weight-svg {
+  // margin: 0 auto 30px;
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+}
+
+.final__summary-weight-graph-target-wrap {
+  position: relative;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.final__summary-weight-graph-target-to {
+  position: absolute;
+  right: 0;
+  bottom: -120px;
+}
+
+.final__summary-weight-graph-bottom {
+  position: relative;
+  top: -10px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+}
+
+.summary-card__body-img-wrap {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 30px;
+}
+
+.summary-card__body-img {
+  width: 114px;
+  height: 215px;
+  margin-right: 30px;
+}
+
+.summary-card__body-results-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.summary-card__body-result {
+  font-weight: 400;
+  font-size: 19px;
+}
+
+.summary-card__body-result--color {
+  color: #a8e063;
+}
+
+.summary-card__body-bottom {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.summary-card__body-bottom--bold {
+  font-weight: 700;
 }
