--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -13,11 +13,15 @@ body {
 }
 
 .container {
-  padding: 0 30px;
+  padding: 0 15px;
   width: 100%;
   max-width: 1500px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    padding: 0 30px;
+  }
 }
 
 a {
