--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -55,6 +55,20 @@
     border-radius: 30px;
     opacity: 0;
     transition: opacity 0.35s ease;
+    z-index: 1;
+  }
+  &:hover::after {
+    background-image: linear-gradient(90deg, #ceef31, #91ef31);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    border-radius: 30px;
+    opacity: 0.9;
+    transition: opacity 0.35s ease;
+    z-index: 2;
   }
 }
 
@@ -69,7 +83,7 @@
 
 .final__hero-button {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   width: 100%;
   height: 100%;
   border-radius: 45px;
@@ -360,4 +374,113 @@
 
 .summary-card__body-bottom--bold {
   font-weight: 700;
+}
+
+.final__people-summary-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.summary-card__people-percent {
+  font-size: 54px;
+  font-weight: 700;
+  color: #fbc02d;
+}
+
+.summary-card__people-desc {
+  line-height: 20.8px;
+  font-size: 17px;
+}
+
+.summary-card__people-desc--bold {
+  font-weight: 700;
+}
+
+.summary-card__people-img {
+  width: 130px;
+  height: 296px;
+}
+
+.final__summary-button-wrap {
+  position: relative;
+  max-width: 345px;
+  width: 100%;
+  height: 62px;
+  border: none;
+  box-shadow: none;
+  text-align: center;
+  border-radius: 45px;
+
+  &::before {
+    background-image: linear-gradient(90deg, #44b26b, #44b26b);
+    border-radius: 45px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    border-radius: 30px;
+    opacity: 1;
+    transition: opacity 0.35s ease;
+    z-index: 1;
+  }
+  &:hover::after {
+    background-image: linear-gradient(90deg, #ceef31, #91ef31);
+    border-radius: 45px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    border-radius: 30px;
+    opacity: 1;
+    transition: opacity 0.35s ease;
+    z-index: 2;
+  }
+}
+
+.final__summary-button {
+  padding: 0 17px;
+  position: relative;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 0 17px;
+  z-index: 1;
+  cursor: pointer;
+  background-color: transparent;
+  border-color: transparent;
+  font-size: 19px;
+  font-weight: 700;
+  color: var(--primary-color);
+  z-index: 3;
+}
+
+.final__summary-card-heading {
+  max-width: 250px;
+  margin-bottom: 25px;
+  font-size: 34px;
+  font-weight: 700;
+}
+
+.final__summary-card-heading-bmi--color {
+  color: #33c6f5;
+}
+
+.final__summary-bmi-subtitle {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.final__summary-bmi-img {
+  width: 125%;
+  height: 125%;
+  overflow: hidden;
+  margin-left: -30px;
 }
