--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -412,6 +412,7 @@
   box-shadow: none;
   text-align: center;
   border-radius: 45px;
+  margin-bottom: 30px;
 
   &::before {
     background-image: linear-gradient(90deg, #44b26b, #44b26b);
@@ -483,4 +484,35 @@
   height: 125%;
   overflow: hidden;
   margin-left: -30px;
+  margin-bottom: 20px;
+}
+
+.final__summary-bmi-bottom {
+  text-align: center;
+  padding: 0 20px;
+}
+
+.final__summary-desc {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.final__summary-desc--bold {
+  font-weight: 700;
+}
+
+.final__summary-desc--colored {
+  font-weight: 700;
+  color: #33c6f5;
+}
+
+.final__summary-bmi-bottom-logo {
+  width: 168px;
+  height: 52px;
+  align-self: center;
+  margin: 15px auto 0;
+}
+
+.final__summary-desc--bmr {
+  margin-bottom: 10px;
 }
