--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -516,3 +516,49 @@
 .final__summary-desc--bmr {
   margin-bottom: 10px;
 }
+
+.final__summary-card-water-img-wrap {
+  position: relative;
+  padding: 30px 0;
+  display: flex;
+  margin-bottom: 30px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 1px;
+    background-image: linear-gradient(90deg, #383546 0, #383546 50%, transparent 0);
+    background-size: 22px 1px;
+    background-repeat: repeat-x;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background-image: linear-gradient(90deg, #383546 0, #383546 50%, transparent 0);
+    background-size: 22px 1px;
+    background-repeat: repeat-x;
+  }
+}
+
+.final__summary-card-water-intake {
+  margin-left: 15px;
+}
+
+.final__summary-card-heading--water {
+  margin: 0;
+}
+
+.water-intake-desc {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.final__summary-water-bottom {
+  text-align: center;
+}
