--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -262,8 +262,17 @@
   font-weight: 400;
 }
 
+.card-wrap {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+
 .final__summary-card {
-  min-height: 469px;
+  height: 469px;
   width: 345px;
   display: flex;
   flex-direction: column;
@@ -271,6 +280,10 @@
   background-color: var(--card-background);
   overflow: hidden;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+  }
 }
 
 .final__summary-weight-head {
@@ -480,11 +493,14 @@
 }
 
 .final__summary-bmi-img {
-  width: 125%;
-  height: 125%;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  margin-left: -30px;
+  // margin-left: -30px;
   margin-bottom: 20px;
+  position: relative;
+  z-index: 2;
+  transform: scale(1.3);
 }
 
 .final__summary-bmi-bottom {
