--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -578,3 +578,74 @@
 .final__summary-water-bottom {
   text-align: center;
 }
+
+.final__summary-card-recipes {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 20px;
+}
+
+.final__summary-card-heading--recipes {
+  text-align: center;
+  font-size: 38px;
+  margin: 0;
+}
+
+.final__summary-card-recipes-img {
+  width: 190px;
+  height: 190px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.final__summary-desc--plan {
+  margin-bottom: 30px;
+}
+
+.graph-plan__middle {
+  width: 265px;
+  height: 210px;
+  position: relative;
+}
+
+.graph-plan__loss {
+  position: absolute;
+  left: -16%;
+  transform: rotate(-90deg);
+  top: auto;
+  bottom: 40%;
+  right: auto;
+}
+
+.graph-plan__col-plan {
+  top: auto;
+  position: absolute;
+  bottom: 93%;
+  width: 88px;
+}
+
+.graph-plan__faster {
+  top: auto;
+  position: absolute;
+  bottom: 93%;
+  width: 88px;
+  left: 49%;
+  text-align: left;
+  right: auto;
+}
+
+.graph-plan__times {
+  position: absolute;
+  bottom: 22%;
+  width: 50px;
+  left: auto;
+  right: 2%;
+  text-align: center;
+}
+
+.graph-plan__times--big {
+  font-size: 30px;
+  font-weight: 700;
+}
