--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -84,13 +84,16 @@
 .final__hero-button {
   position: relative;
   z-index: 3;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   border-radius: 45px;
   border: 1px solid;
   font-size: 33px;
   color: var(--primary-color);
   background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .final__hero-phone-wrap {
