--- a/src/sass/quiz/_quiz-hero-section.scss
+++ b/src/sass/quiz/_quiz-hero-section.scss
@@ -52,9 +52,17 @@
 .hero__mask-svg--card {
   fill: var(--primary-color);
   transform: scale(1);
-  top: -30%;
+  top: -45%;
   left: 0;
   opacity: 0.2;
+
+  @media screen and (min-width: 439px) {
+    top: -41%;
+  }
+
+  @media screen and (min-width: 768px) {
+    top: -35%;
+  }
 }
 
 .hero__heading-wrap {
