--- a/src/sass/_conditions.scss
+++ b/src/sass/_conditions.scss
@@ -43,6 +43,10 @@
   padding-bottom: 50px;
 }
 
+.conditions__container {
+  max-width: 850px;
+}
+
 .info__hero-desc {
   max-width: 520px;
   text-align: center;
@@ -213,4 +217,55 @@
   text-align: center;
   color: var(--primary-color);
   z-index: 1;
+}
+
+.contents__sections {
+  margin-bottom: 60px;
+}
+
+.contents__container {
+  width: 100%;
+  max-width: 350px;
+}
+
+.contents__heading {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.contents__list {
+  font-weight: 400;
+  font-size: 16px;
+  text-decoration: underline;
+  list-style: none;
+  counter-reset: li;
+}
+
+.contents__list-item {
+  &::before {
+    counter-increment: li;
+    content: counters(li, '.') '. ';
+  }
+}
+
+.contents__list-link {
+  text-decoration: underline;
+  color: var(--primary-color);
+}
+
+.policy-content__table_view {
+  width: 100%;
+  margin-top: 60px;
+  border-collapse: collapse;
+}
+
+.policy-content__table_border {
+  border: 1px solid #7f7f7f;
+  color: #7f7f7f;
+  padding: 15px;
+}
+
+.policy-content__table_text--bold {
+  font-weight: 600;
 }
