pay page first element

--- a/src/sass/_paypage.scss
+++ b/src/sass/_paypage.scss
@@ -1,47 +1,389 @@
-.pay__hero-section {
-    background-image: url('../images/meal-plan.jpg');
-    position: relative;
-    padding: 200px 0 30px;
-    overflow: hidden;
-    background-size: cover;
-    background-position: 50%;
+.pay__body {
+  background-image: url('../images/meal-plan.jpg');
+  background-attachment: fixed;
+  background-color: #201d34;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  font-family: Roboto, sans-serif;
+  height: 100%;
+  margin: 0;
+}
 
-    @media screen and (min-width: 768px) {
-        padding: 200px 0 220px;
-    }
+.pay__container {
+  padding-top: 30px;
+
+  @media screen and (min-width: 768px) {
+    width: 550px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 730px;
+  }
+}
+
+.pay__hero-section {
+  position: relative;
+  padding: 200px 0 30px 0;
+  overflow: hidden;
+  background-size: cover;
+  background-position: 50%;
+
+  @media screen and (min-width: 768px) {
+    padding: 200px 0 220px;
+  }
 }
 
 .pay__hero-container {
-    position: relative;
-    max-width: 900px;
-    margin: auto;
-    display: flex;
-    justify-content: center;
+  position: relative;
+  max-width: 900px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .pay__hero-heading {
-    max-width: 500px;
-    position: relative;
-    font-size: 42px;
-    font-weight: 100;
-    color: var(--primary-color);
-    margin-bottom: 30px;
-    text-align: center;
+  max-width: 500px;
+  position: relative;
+  font-size: 42px;
+  font-weight: 100;
+  color: var(--primary-color);
+  text-align: center;
 }
 
 .pay__payment-heading {
-    font-size: 26px;
-    font-weight: 100;
-    text-align: center;
+  font-size: 26px;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.pay__form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .pay__form-checkbox-label {
-    background-color: #151226;
-    border-radius: 10px;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    transition: 0.3s;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.pay__form-checkbox-wrap {
+  background-color: #151226;
+  border-radius: 10px;
+  list-style-type: none;
+  margin: 0;
+  padding: 25px 75px;
+  transition: 0.3s;
+  width: 100%;
+  height: 140px;
+  border: 2px solid #9a949c;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
-    height: 140px;
+    height: 100%;
+    border-radius: 10px;
+    border: 2px solid #ef5eb9;
+    opacity: 0;
+    transition: opacity 0.35s ease;
+  }
+}
+
+.pay__form-checkbox-wrap--male {
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border: 2px solid #728ded;
+    opacity: 0;
+    transition: opacity 0.35s ease;
+  }
+}
+
+.pay__payment-icon-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  background: rgba(99, 97, 113, 0.7);
+  width: 44px;
+  height: 44px;
+  border: 1px solid #636171;
+  border-radius: 50%;
+  transition: all 0.35s ease;
+  padding: 10px;
+  transform: translateY(-50%);
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #f53373, #bf51e8);
+    border-radius: 50%;
+    opacity: 0;
+    transition: opacity 0.35s ease;
+  }
+}
+
+.pay__payment-icon-wrap--male::before {
+  background-image: linear-gradient(90deg, #33f5e0, #5172e8);
+}
+
+.pay__payment-checked-icons {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.pay__payment-icon {
+  fill: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.35s ease;
+  opacity: 0;
+}
+
+.pay__payment-hidden-checkbox {
+  &:checked + .pay__form-checkbox-label .pay__payment-icon:first-child {
+    opacity: 1;
+  }
+  &:not(:checked) + .pay__form-checkbox-label .pay__payment-icon:last-child {
+    opacity: 1;
+  }
+  &:checked + .pay__form-checkbox-label .pay__form-checkbox-wrap::before {
+    opacity: 1;
+  }
+  &:checked + .pay__form-checkbox-label .quiz__choice-line-content {
+    color: var(--primary-color);
+  }
+  &:checked + .pay__form-checkbox-label .pay__payment-icon-wrap::before {
+    opacity: 1;
+  }
+}
+
+.pay__payment-price-title-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.pay__payment-price-title {
+  text-align: left;
+  color: var(--primary-color);
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+.pay__payment-price-subtitle {
+  text-align: left;
+  color: #9a949c;
+  font-size: 0.8rem;
+  font-weight: 300;
+}
+
+.pay__payment-price-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.pay__payment-price-old {
+  color: #9a949c;
+  font-size: 1.1rem;
+  margin-right: 0.5rem;
+  position: relative;
+
+  &::before {
+    background: #ef5eb9;
+    content: ' ';
+    height: 0.1rem;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 60%;
+    transform: skewY(-10deg);
+    transform-origin: left;
+  }
+}
+
+.pay__payment-price-old--male {
+  &::before {
+    background: #728ded;
+  }
+}
+
+.pay__payment-price-new {
+  color: #fff;
+  font-size: 1.8rem;
+}
+
+.pay__payment-price-period {
+  color: #9a949c;
+  font-size: 0.8rem;
+  font-weight: 300;
+}
+
+.pay__payment-price-popular {
+  background-color: #ef5eb9;
+  border-radius: 0.5rem;
+  left: 1.7rem;
+  padding: 0.2rem;
+  position: absolute;
+  right: 1.7rem;
+  text-align: center;
+  bottom: -12px;
+  z-index: 2;
+  border-radius: 0.3rem;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.pay__payment-price-popular--male {
+  background-color: #728ded;
+}
+
+.pay__payment-total-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 18px;
+  font-weight: 500;
+  width: 100%;
+  padding: 0 30px;
+  margin-bottom: 100px;
+}
+
+.pay__payment-total-wrap-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.pay__payment-total-discount-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.pay__payment-total-price-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.pay__payment-total-discount-heading-name {
+  margin-bottom: 15px;
+}
+
+.pay__payment-total-price-old {
+  margin-bottom: 30px;
+}
+
+.pay__payment-total-price-new {
+  color: #ef5eb9;
+}
+.pay__payment-total-price-new--male {
+  color: #728ded;
+}
+
+.pay__payment-total-wrap-bottom {
+  font-size: 24px;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1px solid var(--primary-color);
+  padding-bottom: 10px;
+}
+
+.pay__button {
+  width: 100%;
+  height: 65px;
+  max-width: 360px;
+  border-radius: 30px;
+  position: relative;
+  background-image: linear-gradient(90deg, #f53373, #bf51e8);
+  border: 1px solid #ef5eb9;
+  color: var(--primary-color);
+  font-size: 20px;
+  font-weight: 300;
+  z-index: 1;
+
+  &::before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    border-radius: 30px;
+    opacity: 0;
+    transition: opacity 0.35s ease;
+    background-image: linear-gradient(90deg, #ceef31, #91ef31);
+    z-index: 0;
+  }
+
+  &:hover {
+    border-color: #91ef31;
+  }
+
+  &:hover::before {
+    opacity: 1;
+  }
+}
+
+.pay__button--male {
+  background-image: linear-gradient(90deg, #33f5e0, #5172e8);
+  border: 1px solid #728ded;
+}
+
+.pay__button-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.pay__button-icon {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  top: 14px;
+  right: 20px;
+  fill: currentColor;
+  text-align: center;
 }
